# sketches

./: .gitignore
.github/: FUNDING.yml
a-law-breaking-hack/: README.md  a-law-breaking-hack.cabal
a-law-breaking-hack/src/: Main.hs
ann-monad-var/: README.md
avoid-overlapping-recursive/: README.md  avoid-overlapping-recursive.cabal  stack.yaml
avoid-overlapping-recursive/src/: BackwardsTF.hs  Bonus.hs  Main.hs  TF.hs
better-counterexample-minimization/: CHANGELOG.md  LICENSE  README.md  better-counterexample-minimization.cabal  stack.yaml
better-counterexample-minimization/src/: Main.hs
better-syntax-for-eDSLs/: README.md  better-syntax-for-eDSLs.cabal  stack.yaml
better-syntax-for-eDSLs/src/: Common.hs  Unscoped.hs
compilation-surviving-proofs/: README.lagda.md
custom-type-equality-errors/: README.md  custom-type-equality-errors.cabal  stack.yaml
custom-type-equality-errors/src/: Main.hs
custom-warning-hack/: README.md  custom-warning-hack.cabal  stack.yaml
custom-warning-hack/src/: Main.hs
denotational-approximations/: README.md
exhaustive-unordered-pattern-matching/: CHANGELOG.md  LICENSE  README.md  exhaustive-unordered-pattern-matching.cabal
exhaustive-unordered-pattern-matching/src/: Main.hs
extensible-monadic-lenses/: README.md  extensible-monadic-lenses.cabal  stack.yaml
extensible-monadic-lenses/src/: Main.hs
generalizing-unliftio/: README.md  generalizing-unliftio.cabal
generalizing-unliftio/src/: Main.hs  Peel.hs  SomeAction.hs  Unlift.hs  UnliftIO.hs  UnliftPeel.hs
has-lens-done-right/: README.md  has-lens-done-right.cabal
has-lens-done-right/src/: FunDep.hs  Main.hs  TF.hs
haskell-emacs-jump-to-definition/: README.md  code.el
hierarchical-free-monads-mostly-pointless/: README.md  hierarchical-free-monads-mostly-pointless.cabal  stack.yaml
hierarchical-free-monads-mostly-pointless/src/: FT.hs  HFM.hs  HFT.hs
mineunifier/: LICENSE  README.md  mineunifier.cabal  stack.yaml
mineunifier/src/Mineunifier/: Core.hs  Game.hs  IO.hs  Test.hs  Util.hs
poly-traversable/: README.md  poly-traversable.cabal
poly-traversable/src/: FunDep.hs  Main.hs
poly-type-of-saga/part1-try-unify/: README.md  part1-try-unify.cabal  stack.yaml
poly-type-of-saga/part1-try-unify/src/: Main.hs
poly-type-of-saga/part2-enumerate-type-vars/: README.md  part2-enumerate-type-vars.cabal
poly-type-of-saga/part2-enumerate-type-vars/src/: Main.hs  TypeToString.hs
restore-interruptible/: README.md
things-you-should-avoid/: README.md  stack.yaml  things-you-should-avoid.cabal
things-you-should-avoid/src/: Main.hs
trouble-in-paradise-fibonacci/: README.md  stack.yaml  trouble-in-paradise-fibonacci.cabal
trouble-in-paradise-fibonacci/src/: Main.hs
try-do-is-dangerous/: README.md
type-safe-eDSL-frontend/: CHANGELOG.md  README.md  type-safe-eDSL-frontend.cabal
type-safe-eDSL-frontend/src/: Common.hs  Main.hs  Scoped.hs  Unscoped.hs
unordered-effects/: README.md  stack.yaml  unordered-effects.cabal
unordered-effects/src/: HO.hs  Main.hs
validation-leak/: README.md  fine.sh  leak.sh  stack.yaml  validation-leak.cabal
validation-leak/src/: Except.hs  Fine.hs  Leak.hs  Main.hs
