name:                a-law-breaking-hack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/a-law-breaking-hack#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable a-law-breaking-hack
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
