cabal-version:       2.2

name:                better-syntax-for-eDSLs
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable better-syntax-for-eDSLs
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Common
                       Unscoped
                       Scoped
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
