name:                has-lens-done-right
version:             0.1.0.0
cabal-version:       >=1.10
extra-source-files:  README.md
build-type:          Simple

executable poly-traversable
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       FunDep
                       TF
  build-depends:       base >= 4.7 && < 5,
                       ghc-prim,
                       tagged,
                       lens
