name:                mineunifier
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mineunifier#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mineunifier.Core,
                       Mineunifier.Game,
                       Mineunifier.IO,
                       Mineunifier.Test,
                       Mineunifier.Util
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/githubuser/mineunifier
