cabal-version:       2.2

name:                type-safe-eDSL-frontend
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/type-safe-eDSL-frontend#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable type-safe-eDSL-frontend
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Common
                       Unscoped
                       Scoped
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
