name:                unordered-effects
version:             0.1.0.0
cabal-version:       >=1.10
extra-source-files:  README.md
build-type:          Simple

executable unordered-effects
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       HO
  build-depends:       base >= 4.7 && < 5,
                       transformers,
                       mtl,
                       mmorph,
                       lens,
                       fastsum
