name:                part2-enumerate-type-vars
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/part2-enumerate-type-vars#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable part2-enumerate-type-vars
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       TypeToString
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
